Visual fix: Prevent header alignment

--- a/_sass/partials/_navigation.scss
+++ b/_sass/partials/_navigation.scss
@@ -7,7 +7,7 @@ $nav-scroll-color-hover: rgba(0, 0, 0, .8);
     position: fixed;
     z-index: 500;
     width: 100%;
-    padding: 0 45px;
+    padding: 0 30px;
     @media (min-width: 768px) and (max-width: 991px) {
         padding: 13px 0 0 34px;
     }
@@ -41,7 +41,6 @@ $nav-scroll-color-hover: rgba(0, 0, 0, .8);
         float: left;
         width: 260px;
         height: 55px;
-        margin-right: 20px;
         transform: scale(.7);
         vertical-align: middle;
          @media (max-width: 767px) {
